# movs-viewer

./: .derived  .gitignore  .project  .pydevproject  README.md  mypy.ini  mypy__DELME.ini  pylint.ini  pylintrc  pyproject.toml  setup.py  setup__XXX.py
_delme/: demo.py
charts/: __main__.py  charts.py
charts/model/: __init__.py
charts/view/: __init__.py
charts/window/: __init__.py
demo/: __init__.py  acc.py  demo_accumulate.py  demo_automation.py  demo_barandchart.py  demo_colorscale.py  demo_draw_supersmart.py  demo_purechart.py  demo_qcustomplot.py  demo_qwt.py  demoauto.py  eoystats.py  integratelibretto.py  merge_libretto_supersmart.py  patrimoniobuoni.py  supersmart.py  supersmart2.py  ui.py
demo/scriptlet/: index.html  scriptlet.js
demo/supersmart/: deposito.csv  offerta.csv  scadute.csv
mypyui/: __init__.py  automation.py  chartview.py  constants.py  mainui.py  settings.py  tabui.py  tabui.ui  validator.py  viewmodel.py
mypyui/resources/: mainui.ui  settingsui.ui
resources/: tabui.ui
src/: __main__.py  automation.py  chartview.py  constants.py  mainui.py  movsinflazione.py  movssettings.py  settings.py  validator.py  viewmodel.py
src/movslib/: buoni.py  libretto.py  listamovimentixlsx.py  postepay.py
src/movslib/autotag/: autotag.py  model.py
src/movsmerger/: movsmerger.py
src/movsvalidator/: movsvalidator.py
src/movsviewer/: automation.py  chartview.py  constants.py  mainui.py  merger.py  plotutils.py  settings.py  validator.py  viewmodel.py
src/movsviewer/resources/: settingsui.ui
src/mypyui/: __init__.py  chartview.py  tabui.py  viewmodel.py
src/mypyui/chartview/: __init__.py  util.py
src/mypyui/model/: __init__.py
src/mypyui/view/: __init__.py
src/resources/: mainui.ui
stubs/: QCustomPlot_PyQt6.pyi  setuptools.pyi
stubs/qwt/: __init__.pyi  scale_div.pyi
tests/: barandchart.py  call.py  purechart.py  test_chartview.py  test_constants.py  test_merge_rows.py  test_new_mainui.py  test_plotutils.py  test_sortfilterviewmodel.py  uat.py
tests/_support/: basetest.py  tmpapp.py
uat/: dummy_values.py  test_uat.py
